# davidgd-chess

./: .gitignore
chess_engine/chess_logic/src/: lib.rs  movement.rs
chess_gui/: Cargo.toml
chess_gui/src/: main.rs
