[package]
name = "gui"
version = "0.1.0"
authors = ["vnomarrow <vnomarrow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_logic = { path = "../chess_engine/chess_logic" }
ggez = "0.6.1"
glam = { version = "0.17.3", features = ["mint"]}
